--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -644,6 +644,14 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
 .whitespace-pre-line {
   white-space: pre-line;
 }
